@startuml

title __APP's Class Diagram__\n

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.models {
      class Balle {
      }
    }
  }
  

  package insa.clutchgames.wallpass {
    class BuildConfig {
    }
  }
  

  package insa.clutchgames.wallpass {
    class ExampleInstrumentedTest {
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.activities {
      class GameActivity {
      }
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.threads {
      class GameLoopThread {
      }
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.views {
      class GameView {
      }
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.models {
      class GameWorld {
      }
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.activities {
      class MainActivity {
      }
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.models {
      class Mur {
      }
    }
  }
  

  package android.support.v7.recyclerview {
    class R {
    }
  }
  

  package insa.clutchgames.wallpass {
    class R {
    }
  }
  

  package android.support.design {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    package android.support.graphics.drawable.animated {
      class R {
      }
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.transition {
    class R {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.mediacompat {
    class R {
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.support.v4 {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  package android.support.constraint {
    class R {
    }
  }
  

  package insa.clutchgames.wallpass {
    package insa.clutchgames.wallpass.activities {
      class SplashScreen {
      }
    }
  }
  

  Balle o-- GameWorld : w
  GameActivity -up-|> AppCompatActivity
  GameActivity o-- GameView : gameView
  GameLoopThread o-- GameView : view
  GameView -up-|> Callback
  GameView -up-|> SurfaceView
  GameView o-- GameLoopThread : gameThread
  GameView o-- GameWorld : w
  GameWorld -up-|> World
  GameWorld o-- Balle : balle
  MainActivity -up-|> OnClickListener
  MainActivity -up-|> AppCompatActivity
  Mur o-- GameWorld : world
  SplashScreen -up-|> Activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
